[gd_scene load_steps=5 format=3 uid="uid://xf08d41mo60b"]

[ext_resource type="Theme" uid="uid://8v4be764xt8s" path="res://assets/base_theme.tres" id="1"]
[ext_resource type="Script" path="res://src/screen/settings_screen.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://clb13nxm4p246" path="res://assets/sfx/click.wav" id="3"]
[ext_resource type="FontFile" path="res://assets/fonts/vazir_farsi_font.tres" id="4"]

[node name="SettingsScreen" type="PopupPanel"]
size = Vector2i(720, 1280)
exclusive = true
theme = ExtResource("1")
script = ExtResource("2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -272.0
offset_top = 240.0
offset_right = 272.0
offset_bottom = 716.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
text = "Volume"

[node name="VSeparator" type="VSeparator" parent="Control/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="MasterHSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(320, 100)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
max_value = 9.0
value = 9.0

[node name="VSeparator2" type="VSeparator" parent="Control/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Value" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
text = "09"

[node name="HSeparator" type="HSeparator" parent="Control/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
text = "Effects"

[node name="VSeparator" type="VSeparator" parent="Control/VBoxContainer/HBoxContainer2"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="SFXHSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(320, 100)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
max_value = 9.0
value = 9.0

[node name="VSeparator2" type="VSeparator" parent="Control/VBoxContainer/HBoxContainer2"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Value" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
text = "09"

[node name="HSeparator2" type="HSeparator" parent="Control/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
text = "Music"

[node name="VSeparator" type="VSeparator" parent="Control/VBoxContainer/HBoxContainer3"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="MusicHSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(320, 100)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
max_value = 9.0
value = 9.0

[node name="VSeparator2" type="VSeparator" parent="Control/VBoxContainer/HBoxContainer3"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Value" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
text = "09"

[node name="HSeparator4" type="HSeparator" parent="Control/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="Control/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="lang" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/lang"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
text = "English"

[node name="VSeparator" type="VSeparator" parent="Control/VBoxContainer/lang"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="lang_value" type="HSlider" parent="Control/VBoxContainer/lang"]
custom_minimum_size = Vector2(320, 100)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
max_value = 1.0
value = 1.0

[node name="VSeparator2" type="VSeparator" parent="Control/VBoxContainer/lang"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Value" type="Label" parent="Control/VBoxContainer/lang"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
text = "ﯽﺳﺭﺎﻓ"

[node name="AdsCheckButton" type="CheckButton" parent="Control"]
visible = false
custom_minimum_size = Vector2(240, 100)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 215.0
offset_right = 156.0
offset_bottom = 315.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "lang"

[node name="CloseButton" type="Button" parent="Control"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.938
offset_top = -304.26
offset_right = 207.062
offset_bottom = -204.26
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Close"

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")
bus = &"SFX"

[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer/MasterHSlider" to="." method="_on_MasterHSlider_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer2/SFXHSlider" to="." method="_on_SFXHSlider_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer3/MusicHSlider" to="." method="_on_MusicHSlider_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/lang/lang_value" to="." method="_on_lang_value_value_changed"]
[connection signal="toggled" from="Control/AdsCheckButton" to="." method="_on_lang_toggled"]
[connection signal="toggled" from="Control/AdsCheckButton" to="." method="_on_AdsCheckButton_toggled"]
[connection signal="pressed" from="Control/CloseButton" to="." method="_on_CloseButton_pressed"]
